[gd_scene load_steps=2 format=3 uid="uid://d2jvq8mhkx5re"]

[ext_resource type="Script" path="res://src/entities/crew/CrewSquad.gd" id="1_crew_squad"]

[node name="CrewSquad" type="Node2D"]
script = ExtResource("1_crew_squad")

[node name="Members" type="Node2D" parent="."]

[node name="SkillCooldownTimer" type="Timer" parent="."]
one_shot = true

[node name="RecoveryTimer" type="Timer" parent="."]

[node name="SelectionIndicator" type="ColorRect" parent="."]
visible = false
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
color = Color(0.2, 0.8, 0.2, 0.3)

[node name="ClassIcon" type="Sprite2D" parent="."]
position = Vector2(0, -24)
scale = Vector2(0.3, 0.3)

[node name="HealthBarBG" type="ColorRect" parent="."]
offset_left = -16.0
offset_top = -32.0
offset_right = 16.0
offset_bottom = -28.0
color = Color(0.2, 0.2, 0.2, 1)

[node name="HealthBar" type="ColorRect" parent="HealthBarBG"]
offset_right = 32.0
offset_bottom = 4.0
color = Color(0.2, 0.8, 0.2, 1)

[node name="SkillIndicator" type="ColorRect" parent="."]
visible = false
offset_left = -16.0
offset_top = -36.0
offset_right = 16.0
offset_bottom = -34.0
color = Color(0.8, 0.8, 0.2, 1)
